Crash when increasing text object bevel depth #75405

Closed
opened 2020-04-05 10:20:22 +02:00 by Wouter Stomp · 20 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 23:49, hash: f1fb3eb975
Worked: unknown

Short description of error
When I add some bevel depth to a text object, blender crashes. This is the error from the terminal:

Blender(6343,0x700003ec2000) malloc: Incorrect checksum for freed object 0x7f808c457090: probably modified after being freed.
Corrupt value: 0x3c9bd233bbca8474
Blender(6343,0x700003ec2000) malloc: set a breakpoint in malloc_error_break to debugExact steps for others to reproduce the error*
With the default blender scene: delete cube. Add text object. In data properties -> geometry -> bevel depth, click on the right arrow a few times to increase the value. Blender crashes, sometimes after clicking once, sometimes after a few times.

**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 23:49, hash: `f1fb3eb975` Worked: unknown **Short description of error** When I add some bevel depth to a text object, blender crashes. This is the error from the terminal: Blender(6343,0x700003ec2000) malloc: Incorrect checksum for freed object 0x7f808c457090: probably modified after being freed. Corrupt value: 0x3c9bd233bbca8474 Blender(6343,0x700003ec2000) malloc: ***set a breakpoint in malloc_error_break to debug**Exact steps for others to reproduce the error** With the default blender scene: delete cube. Add text object. In data properties -> geometry -> bevel depth, click on the right arrow a few times to increase the value. Blender crashes, sometimes after clicking once, sometimes after a few times.
Author

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket

#75459 was marked as duplicate of this issue

#75459 was marked as duplicate of this issue
Author

The crash persists in the latest daily build (April 4th).

The crash persists in the latest daily build (April 4th).
Contributor

Added subscriber: @FynnGr

Added subscriber: @FynnGr
Contributor

I cant reprodruce the problem in on my PC (Windows 10 64bit, i5 7500, rx 590, 16GB RAM)

I cant reprodruce the problem in on my PC (Windows 10 64bit, i5 7500, rx 590, 16GB RAM)
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Don't know which project tag to add ^^'

Blender(3435,0x11af385c0) malloc: Heap corruption detected, free list is damaged at 0x60000321e520
*** Incorrect guard value: 4403344180328957044
Blender(3435,0x11af385c0) malloc: *** set a breakpoint in malloc_error_break to debug
- 5	 in MEM_lockfree_callocN at blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:267
- 6	 in IDP_NewString at blender/source/blender/blenkernel/intern/idprop.c:342
- 7	 in RNA_property_string_set at blender/source/blender/makesrna/intern/rna_access.c:3542
- 8	 in pyrna_py_to_prop at blender/source/blender/python/intern/bpy_rna.c:1902
- 9	 in pyrna_struct_setattro at blender/source/blender/python/intern/bpy_rna.c:4524
- 10	 in PyObject_SetAttr at dev/build_darwin/deps/build/python/src/external_python/Objects/object.c:1014
- 11	 in _PyEval_EvalFrameDefault at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:2015
- 12	 in PyEval_EvalFrameEx [inlined] at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:547
- 13	 in _PyEval_EvalCodeWithName at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:3930
- 14	 in _PyFunction_FastCallKeywords at dev/build_darwin/deps/build/python/src/external_python/Objects/call.c:433
- 15	 in call_function at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:4616
- 16	 in _PyEval_EvalFrameDefault at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:3093
- 17	 in function_code_fastcall at dev/build_darwin/deps/build/python/src/external_python/Objects/call.c:283
- 18	 in bpy_class_call at blender/source/blender/python/intern/bpy_rna.c:8505
- 19	 in panel_draw at blender/source/blender/makesrna/intern/rna_ui.c:142
- 20	 in ed_panel_draw at blender/source/blender/editors/screen/area.c:2429
- 21	 in ED_region_panels_layout_ex at blender/source/blender/editors/screen/area.c:2587
- 22	 in ED_region_panels_ex at blender/source/blender/editors/screen/area.c:2713
- 23	 in view3d_tools_region_draw at blender/source/blender/editors/space_view3d/space_view3d.c:1439
- 24	 in ED_region_do_draw at blender/source/blender/editors/screen/area.c:534
- 25	 in wm_draw_window_offscreen at blender/source/blender/windowmanager/intern/wm_draw.c:683
- 26	 in wm_draw_window at blender/source/blender/windowmanager/intern/wm_draw.c:807
- 27	 in wm_draw_update at blender/source/blender/windowmanager/intern/wm_draw.c:1015
- 28	 in WM_main at blender/source/blender/windowmanager/intern/wm.c:453
#29	 in main at blender/source/creator/creator.c:524

600a627f6e
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.10.12

Don't know which project tag to add `^^'` ``` Blender(3435,0x11af385c0) malloc: Heap corruption detected, free list is damaged at 0x60000321e520 *** Incorrect guard value: 4403344180328957044 Blender(3435,0x11af385c0) malloc: *** set a breakpoint in malloc_error_break to debug ``` ```lines=6 - 5 in MEM_lockfree_callocN at blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:267 - 6 in IDP_NewString at blender/source/blender/blenkernel/intern/idprop.c:342 - 7 in RNA_property_string_set at blender/source/blender/makesrna/intern/rna_access.c:3542 - 8 in pyrna_py_to_prop at blender/source/blender/python/intern/bpy_rna.c:1902 - 9 in pyrna_struct_setattro at blender/source/blender/python/intern/bpy_rna.c:4524 - 10 in PyObject_SetAttr at dev/build_darwin/deps/build/python/src/external_python/Objects/object.c:1014 - 11 in _PyEval_EvalFrameDefault at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:2015 - 12 in PyEval_EvalFrameEx [inlined] at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:547 - 13 in _PyEval_EvalCodeWithName at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:3930 - 14 in _PyFunction_FastCallKeywords at dev/build_darwin/deps/build/python/src/external_python/Objects/call.c:433 - 15 in call_function at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:4616 - 16 in _PyEval_EvalFrameDefault at dev/build_darwin/deps/build/python/src/external_python/Python/ceval.c:3093 - 17 in function_code_fastcall at dev/build_darwin/deps/build/python/src/external_python/Objects/call.c:283 - 18 in bpy_class_call at blender/source/blender/python/intern/bpy_rna.c:8505 - 19 in panel_draw at blender/source/blender/makesrna/intern/rna_ui.c:142 - 20 in ed_panel_draw at blender/source/blender/editors/screen/area.c:2429 - 21 in ED_region_panels_layout_ex at blender/source/blender/editors/screen/area.c:2587 - 22 in ED_region_panels_ex at blender/source/blender/editors/screen/area.c:2713 - 23 in view3d_tools_region_draw at blender/source/blender/editors/space_view3d/space_view3d.c:1439 - 24 in ED_region_do_draw at blender/source/blender/editors/screen/area.c:534 - 25 in wm_draw_window_offscreen at blender/source/blender/windowmanager/intern/wm_draw.c:683 - 26 in wm_draw_window at blender/source/blender/windowmanager/intern/wm_draw.c:807 - 27 in wm_draw_update at blender/source/blender/windowmanager/intern/wm_draw.c:1015 - 28 in WM_main at blender/source/blender/windowmanager/intern/wm.c:453 #29 in main at blender/source/creator/creator.c:524 ``` 600a627f6e Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.10.12
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

While slowly clicking the arrows to increase and decrease the value, it took approximately 30-40 clicks before it would crash. Dragging the value it crashed almost instantly.
Running with --debug --debug-cycles --debug-all --factory-startup it crashes on the first click.

graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT
graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT
graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL_DONE()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY()
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_SELECT_UPDATE()
[SCScene :: View Layer]: Accumulated recalc bits for OBText: 8322
[SCScene :: View Layer]: Accumulated recalc bits for CUText: 4282380163
[SCScene :: View Layer]: deg_evaluate_copy_on_write on CUText (000002003C06B388)
[SCScene :: View Layer]: deg_evaluate_copy_on_write on OBText (000002003BA2F028)
[SCScene :: View Layer]: BKE_object_data_select_update on CUText (000002003C06B388)
[SCScene :: View Layer]: BKE_curve_eval_geometry on CUText (000002003C06B388)
[SCScene :: View Layer]: BKE_object_eval_uber_data on OBText (000002003BA2F028)
[SCScene :: View Layer]: BKE_object_handle_data_update on OBText (000002003BA2F028)
Memoryblock makebevelcurve: end corrupt```

When not crashing, the previous block ends with
```[SCScene :: View Layer]: BKE_object_select_update on OBText (000002003BA2F028)
[SCScene :: View Layer]: BKE_object_data_select_update on CUText (000002003C06B388)```
and doesn't have `Memoryblock makebevelcurve: end corrupt`

[blender_debug_output.txt](https://archive.blender.org/developer/F8450607/blender_debug_output.txt)

---

**System Information**
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51

**Blender Version**
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: 505a19ed75
While slowly clicking the arrows to increase and decrease the value, it took approximately 30-40 clicks before it would crash. Dragging the value it crashed almost instantly. Running with `--debug --debug-cycles --debug-all --factory-startup` it crashes on the first click. ```graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL() [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL_DONE() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY() [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_SELECT_UPDATE() [SCScene :: View Layer]: Accumulated recalc bits for OBText: 8322 [SCScene :: View Layer]: Accumulated recalc bits for CUText: 4282380163 [SCScene :: View Layer]: deg_evaluate_copy_on_write on CUText (000002003C06B388) [SCScene :: View Layer]: deg_evaluate_copy_on_write on OBText (000002003BA2F028) [SCScene :: View Layer]: BKE_object_data_select_update on CUText (000002003C06B388) [SCScene :: View Layer]: BKE_curve_eval_geometry on CUText (000002003C06B388) [SCScene :: View Layer]: BKE_object_eval_uber_data on OBText (000002003BA2F028) [SCScene :: View Layer]: BKE_object_handle_data_update on OBText (000002003BA2F028) Memoryblock makebevelcurve: end corrupt``` When not crashing, the previous block ends with ```[SCScene :: View Layer]: BKE_object_select_update on OBText (000002003BA2F028) [SCScene :: View Layer]: BKE_object_data_select_update on CUText (000002003C06B388)``` and doesn't have `Memoryblock makebevelcurve: end corrupt` [blender_debug_output.txt](https://archive.blender.org/developer/F8450607/blender_debug_output.txt) --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: 505a19ed75
Member

2.83 (sub 11), branch: master, commit date: 2020-03-23 23:42, hash: 94b8166a8b from the buildbot
Running with --debug --debug-cycles --debug-all --factory-startup no crashing, but it does report the same corruption in the debug output.

graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT
graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT
graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_SELECT_UPDATE()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT()
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL_DONE()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY()
[SCScene :: View Layer]: Accumulated recalc bits for OBText: 8322
[SCScene :: View Layer]: Accumulated recalc bits for CUText: 4282380163
[SCScene :: View Layer]: deg_evaluate_copy_on_write on CUText (000001D97CFF9248)
[SCScene :: View Layer]: deg_evaluate_copy_on_write on OBText (000001D976BBF708)
[SCScene :: View Layer]: BKE_object_data_select_update on CUText (000001D97CFF9248)
[SCScene :: View Layer]: BKE_curve_eval_geometry on CUText (000001D97CFF9248)
[SCScene :: View Layer]: BKE_object_eval_uber_data on OBText (000001D976BBF708)
[SCScene :: View Layer]: BKE_object_handle_data_update on OBText (000001D976BBF708)
Memoryblock makebevelcurve: end corrupt
[SCScene :: View Layer]: BKE_object_select_update on OBText (000001D976BBF708)
[SCScene :: View Layer]: BKE_object_data_select_update on CUText (000001D97CFF9248)
Depsgraph updated in 0.012269 seconds.
Depsgraph evaluation FPS: 18.853242```

[blender_debug_output.txt](https://archive.blender.org/developer/F8450639/blender_debug_output.txt)
2.83 (sub 11), branch: master, commit date: 2020-03-23 23:42, hash: 94b8166a8b from the buildbot Running with `--debug --debug-cycles --debug-all --factory-startup` no crashing, but it does report the same corruption in the debug output. ```graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=CUText flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT graph_id_tag_update: id=CUText flags=COPY_ON_WRITE source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_SELECT_UPDATE() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT() [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL() [SCScene :: View Layer]: Operation is entry point for update: GEOMETRY_EVAL_DONE() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY() [SCScene :: View Layer]: Accumulated recalc bits for OBText: 8322 [SCScene :: View Layer]: Accumulated recalc bits for CUText: 4282380163 [SCScene :: View Layer]: deg_evaluate_copy_on_write on CUText (000001D97CFF9248) [SCScene :: View Layer]: deg_evaluate_copy_on_write on OBText (000001D976BBF708) [SCScene :: View Layer]: BKE_object_data_select_update on CUText (000001D97CFF9248) [SCScene :: View Layer]: BKE_curve_eval_geometry on CUText (000001D97CFF9248) [SCScene :: View Layer]: BKE_object_eval_uber_data on OBText (000001D976BBF708) [SCScene :: View Layer]: BKE_object_handle_data_update on OBText (000001D976BBF708) Memoryblock makebevelcurve: end corrupt [SCScene :: View Layer]: BKE_object_select_update on OBText (000001D976BBF708) [SCScene :: View Layer]: BKE_object_data_select_update on CUText (000001D97CFF9248) Depsgraph updated in 0.012269 seconds. Depsgraph evaluation FPS: 18.853242``` [blender_debug_output.txt](https://archive.blender.org/developer/F8450639/blender_debug_output.txt)
Member

Added subscriber: @Blendergeek24

Added subscriber: @Blendergeek24
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Reverting e34d3e32dd seems to fix it. Checking...

Reverting e34d3e32dd seems to fix it. Checking...
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

@HooglyBoogly, please have a look at this. It seems the number of vertices is incorrectly computed in the new code.

@HooglyBoogly, please have a look at this. It seems the number of vertices is incorrectly computed in the new code.
Member

Oof, looks like I tested with a debug build but not with -d!

Oof, looks like I tested with a debug build but not with `-d`!

This issue was referenced by d7273f087d

This issue was referenced by d7273f087dbf351d8520ac974190f5da335be429
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-04-09 22:31:05 +02:00

This issue was referenced by 71a333f56e

This issue was referenced by 71a333f56e40b6cedf1dcb21c281b5df7123d468
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75405
No description provided.